--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <h1>Plan & Go ✈</h1>
-    <p>Your smart travel planner – simple, fast & personalized.</p>
+    <p>Your smart travel planner - simple, fast & personalized.</p>
 
     <div class="trip-form">
       <!-- Days -->
