Added new Suggested trip session

--- a/project.html
+++ b/project.html
@@ -71,6 +71,32 @@
     </div>
   </section>
 
+  <section class="suggested-trips">
+  <h2>🌍 Suggested Trips</h2>
+  <p>Discover some of our handpicked destinations to make your travel unforgettable.</p>
+  
+  <div class="trips-container">
+    <div class="trip-card">
+      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Maldives">
+      <h3>Maldives Getaway</h3>
+      <p>Relax at beautiful beaches, enjoy water sports and luxury resorts.</p>
+    </div>
+
+    <div class="trip-card">
+      <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff" alt="Paris">
+      <h3>Romantic Paris</h3>
+      <p>Explore the Eiffel Tower, Louvre Museum, and charming streets of Paris.</p>
+    </div>
+
+    <div class="trip-card">
+      <img src="https://images.unsplash.com/photo-1549887534-3db1bd59dcca" alt="Tokyo">
+      <h3>Tokyo Adventure</h3>
+      <p>Experience modern culture, anime, and delicious Japanese cuisine.</p>
+    </div>
+  </div>
+</section>
+
+
   <!-- Footer (Only visible when scrolling to bottom) -->
   <footer>
     <p>Contact us: planandgo@gmail.com | +91 98765 43210</p>
