--- a/login.html
+++ b/login.html
@@ -1,2 +1,33 @@
 
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Travel Planner - Login</title>
+  <link rel="stylesheet" href="login.css">
+</head>
+<body>
+
+    <h2><i> Log-in ⬇️</i></h2>
+
+  <!-- Navbar -->
+  <nav class="navbar">
+    <div class="logo">Plan & Go ✈</div>
+  </nav>
+
+
+  <!-- Login Box -->
+  <div class="login-container">
+    <h2>Welcome back!<br> Chlo abb karte hai apna trip plan..... 😎✈️</h2>
+    <form id="loginForm">
+      <input type="email" placeholder="Email" required>
+      <input type="password" placeholder="Password" required>
+      <button type="submit">Login</button>
+    </form>
+  </div>
+
+  <script src="login.js"></script>
+</body>
+</html>
