--- a/project.html
+++ b/project.html
@@ -66,7 +66,7 @@
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <div class="card">🌍 Explore Destinations</div>
+      <!-- <div class="card">🌍 Explore Destinations</div> -->
       <div class="card">💰 Track Expenses</div>
       <div class="card">☀ Get Weather Updates</div>
       <div class="card">🤝 Share Trips</div>
@@ -79,24 +79,29 @@
   
   <div class="trips-container">
     <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Maldives">
-      <h3>Maldives Getaway</h3>
-      <p>Relax at beautiful beaches, enjoy water sports and luxury resorts.</p>
+  <img src="Shimla.png" alt="Shimla Family Trip">
+  <h3>Family Fun in Shimla</h3>
+  <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
+</div>
+
+
+
+    <!-- Friends Trip -->
+    <div class="trip-card">
+      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
+      <h3>Goa Adventure with Friends</h3>
+      <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
     </div>
 
+    <!-- Couple Trip -->
     <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1526772662000-3f88f10405ff" alt="Paris">
-      <h3>Romantic Paris</h3>
-      <p>Explore the Eiffel Tower, Louvre Museum, and charming streets of Paris.</p>
-    </div>
-
-    <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1549887534-3db1bd59dcca" alt="Tokyo">
-      <h3>Tokyo Adventure</h3>
-      <p>Experience modern culture, anime, and delicious Japanese cuisine.</p>
+      <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
+      <h3>Romantic Paris Escape</h3>
+      <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
     </div>
   </div>
 </section>
+
 
 
   <!-- Footer (Only visible when scrolling to bottom) -->
@@ -108,6 +113,3 @@
   <script src="project.js"></script>
 </body>
 </html>
-
-
-
