--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h2><i> Log-in ⬇️</i></h2>
+    <h2> Log-in </h2>
 
   <!-- Navbar -->
   <nav class="navbar">
@@ -20,7 +20,7 @@
 
   <!-- Login Box -->
   <div class="login-container">
-    <h2>Welcome back!<br> Chlo abb karte hai apna trip plan..... 😎✈️</h2>
+    <h2>Welcome back!</h2>
     <form id="loginForm">
       <input type="email" placeholder="Email" required>
       <input type="password" placeholder="Password" required>
