--- a/login.html
+++ b/login.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,22 +8,25 @@
 </head>
 <body>
 
-    <h2><i> Log-in ⬇️</i></h2>
-
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Plan & Go ✈</div>
   </nav>
 
-
   <!-- Login Box -->
   <div class="login-container">
-    <h2>Welcome back!<br> Chlo abb karte hai apna trip plan..... 😎✈️</h2>
-    <form id="loginForm">
-      <input type="email" placeholder="Email" required>
-      <input type="password" placeholder="Password" required>
-      <button type="submit">Login</button>
-    </form>
+    <div class="login-box">
+      <h2>Welcome back! 👋</h2>
+      <p class="welcome-text">Chlo abb karte hai apna trip plan 😎✈️</p>
+
+      <form id="loginForm">
+        <input type="email" placeholder="Email" required>
+        <input type="password" placeholder="Password" required>
+        <button type="submit">Login</button>
+      </form>
+
+      <p class="redirect-text">Don't have an account? <a href="signup.html">Sign Up</a></p>
+    </div>
   </div>
 
   <script src="login.js"></script>
