--- a/project.html
+++ b/project.html
@@ -80,23 +80,22 @@
   <div class="trips-container">
     <div class="trip-card">
   <img src="Shimla.png" alt="Shimla Family Trip">
-  <h3>Family Fun in Shimla</h3> 
+  <h3>Best choices for Snowy Retreat</h3> 
   <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
 </div>
-
 
 
     <!-- Friends Trip -->
     <div class="trip-card">
       <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
-      <h3>Goa Adventure with Friends</h3>
+      <h3>Best choices for Sunnny Shores Retreat</h3>
       <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
     </div>
-
+ 
     <!-- Couple Trip -->
     <div class="trip-card">
       <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-      <h3>Romantic Paris Escape</h3>
+      <h3>Best choices for Rain Retreat</h3>
       <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
     </div>
   </div>
