Login page updated

--- a/login.html
+++ b/login.html
@@ -29,6 +29,9 @@
     </div>
   </div>
 
+  <!-- Airplane Animation Icon -->
+  <div class="airplane">✈️</div>
+
   <script src="login.js"></script>
 </body>
 </html>
