--- a/project.html
+++ b/project.html
@@ -1,5 +1,4 @@
 
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -44,20 +43,18 @@
 
   <!-- Hero Section -->
   <section class="hero">
+
+    <!-- ✅ Background Video -->
+    <video autoplay muted loop playsinline class="bg-video">
+      <!-- 🔥 Yahan apna Instagram reel ka direct video URL daalo -->
+      <source src="https://www.instagram.com/reel/C8jP9DKPKU0/?igsh=bGRua2FvZ3Zyazc5" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
     <h1>Plan & Go ✈</h1>
     <p>Your smart travel planner - simple, fast & personalized.</p>
 
     <div class="trip-form">
-<<<<<<< HEAD
-      <!-- Days -->
-      <select id="days">
-        <option value="">Travel Days</option>
-        <option value="1">Single Day</option>
-        <option value="2-3">2 - 3 Days</option>
-        <option value="4-5">4 - 5 Days</option>
-        <option value="5-7">5 - 7 Days</option>
-      </select>
-=======
       <!-- Start Date -->
       <label>Start Date:</label>
       <input type="date" id="startDate">
@@ -65,7 +62,6 @@
       <!-- End Date -->
       <label>End Date:</label>
       <input type="date" id="endDate">
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
 
       <!-- Destination with search -->
       <div class="destination-input">
@@ -100,25 +96,17 @@
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <!-- <div class="card">🌍 Explore Destinations</div> -->
       <div class="card">💰 Track Expenses</div>
       <div class="card">☀ Get Weather Updates</div>
       <div class="card">🤝 Share Trips</div>
     </div>
   </section>
 
+  <!-- Suggested Trips -->
   <section class="suggested-trips">
     <h2>🌍 Suggested Trips</h2>
     <p>Discover some of our handpicked destinations to make your travel unforgettable.</p>
   
-<<<<<<< HEAD
-  <div class="trips-container">
-    <div class="trip-card">
-  <img src="Shimla.png" alt="Shimla Family Trip">
-  <h3>Best choices for Snowy Retreat</h3> 
-  <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
-</div>
-=======
     <div class="trips-container">
       <!-- Shimla -->
       <div class="trip-card">
@@ -126,37 +114,15 @@
         <h3>Family Fun in Shimla</h3> 
         <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
       </div>
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
 
-      <!-- Friends Trip -->
+      <!-- Goa -->
       <div class="trip-card">
         <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
         <h3>Goa Adventure with Friends</h3>
         <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
       </div>
 
-<<<<<<< HEAD
-    <!-- Friends Trip -->
-    <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
-      <h3>Best choices for Sunnny Shores Retreat</h3>
-      <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
-    </div>
- 
-    <!-- Couple Trip -->
-    <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-      <h3>Best choices for Rain Retreat</h3>
-      <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
-    </div>
-  </div>
-</section>
-
-
-
-  <!-- Footer (Only visible when scrolling to bottom) -->
-=======
-      <!-- Couple Trip -->
+      <!-- Paris -->
       <div class="trip-card">
         <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
         <h3>Romantic Paris Escape</h3>
@@ -250,8 +216,7 @@
     });
   </script>
 
-  <!-- ✅ Footer -->
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
+  <!-- Footer -->
   <footer>
     <p>Contact us: planandgo@gmail.com | +91 98765 43210</p>
     <p>© 2025 Plan & Go. All rights reserved.</p>
