--- a/project.html
+++ b/project.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -48,16 +46,6 @@
     <p>Your smart travel planner - simple, fast & personalized.</p>
 
     <div class="trip-form">
-<<<<<<< HEAD
-      <!-- Days -->
-      <select id="days">
-        <option value="">Travel Days</option>
-        <option value="1">Single Day</option>
-        <option value="2-3">2 - 3 Days</option>
-        <option value="4-5">4 - 5 Days</option>
-        <option value="5-7">5 - 7 Days</option>
-      </select>
-=======
       <!-- Start Date -->
       <label>Start Date:</label>
       <input type="date" id="startDate">
@@ -65,7 +53,6 @@
       <!-- End Date -->
       <label>End Date:</label>
       <input type="date" id="endDate">
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
 
       <!-- Destination with search -->
       <div class="destination-input">
@@ -75,50 +62,30 @@
       </div>
 
       <!-- People count -->
-      <select id="people">
-        <option value="">People</option>
-        <option value="1">1 Person</option>
-        <option value="2">2 People</option>
-        <option value="3">3 People</option>
-        <option value="4">4 People</option>
-        <option value="5">5 People</option>
-        <option value="6">6 People</option>
-        <option value="7">7 People</option>
-        <option value="8">8 People</option>
-        <option value="9">9 People</option>
-        <option value="10">10 People</option>
-      </select>
+      <input type="number" id="people" min="1" placeholder="Number of People">
 
       <button onclick="planTrip()">Plan Trip</button>
     </div>
   </section>
 
-  <!-- Extra Content Section for Scroll -->
+  <!-- About Section -->
   <section class="about">
     <h2>Why Choose Plan & Go?</h2>
     <p>Plan & Go helps you create personalized travel itineraries, track expenses, check weather forecasts, 
     and share your trips with friends. Our simple design makes travel planning smooth and fun!</p>
 
     <div class="features">
-      <!-- <div class="card">🌍 Explore Destinations</div> -->
       <div class="card">💰 Track Expenses</div>
       <div class="card">☀ Get Weather Updates</div>
       <div class="card">🤝 Share Trips</div>
     </div>
   </section>
 
+  <!-- Suggested Trips -->
   <section class="suggested-trips">
     <h2>🌍 Suggested Trips</h2>
     <p>Discover some of our handpicked destinations to make your travel unforgettable.</p>
   
-<<<<<<< HEAD
-  <div class="trips-container">
-    <div class="trip-card">
-  <img src="Shimla.png" alt="Shimla Family Trip">
-  <h3>Best choices for Snowy Retreat</h3> 
-  <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
-</div>
-=======
     <div class="trips-container">
       <!-- Shimla -->
       <div class="trip-card">
@@ -126,7 +93,6 @@
         <h3>Family Fun in Shimla</h3> 
         <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
       </div>
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
 
       <!-- Friends Trip -->
       <div class="trip-card">
@@ -135,27 +101,6 @@
         <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
       </div>
 
-<<<<<<< HEAD
-    <!-- Friends Trip -->
-    <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
-      <h3>Best choices for Sunnny Shores Retreat</h3>
-      <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
-    </div>
- 
-    <!-- Couple Trip -->
-    <div class="trip-card">
-      <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-      <h3>Best choices for Rain Retreat</h3>
-      <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
-    </div>
-  </div>
-</section>
-
-
-
-  <!-- Footer (Only visible when scrolling to bottom) -->
-=======
       <!-- Couple Trip -->
       <div class="trip-card">
         <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
@@ -204,7 +149,7 @@
       const days = Math.ceil(diffTime / (1000 * 60 * 60 * 24)) + 1; // include both start & end day
 
       // Redirect user to trip-schedule page with query params
-      window.location.href = `trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)}`;
+      window.location.href = trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)};
     }
 
     // ✅ Fetch location suggestions from OpenStreetMap Nominatim API
@@ -218,7 +163,7 @@
         return;
       }
 
-      const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`;
+      const url = https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5;
 
       try {
         const response = await fetch(url, { headers: { "Accept-Language": "en" } });
@@ -251,12 +196,9 @@
   </script>
 
   <!-- ✅ Footer -->
->>>>>>> c2bb361d4d11e51934839d14dc9cd818c8ec010a
   <footer>
     <p>Contact us: planandgo@gmail.com | +91 98765 43210</p>
     <p>© 2025 Plan & Go. All rights reserved.</p>
   </footer>
-
-  <script src="project.js"></script>
 </body>
 </html>
