--- a/login.html
+++ b/login.html
@@ -1,37 +1,29 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel Planner - Login</title>
+  <title>Login Page</title>
   <link rel="stylesheet" href="login.css">
 </head>
 <body>
-
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Plan & Go ✈</div>
-  </nav>
-
-  <!-- Login Box -->
   <div class="login-container">
-    <div class="login-box">
-      <h2>Welcome back! 👋</h2>
-      <p class="welcome-text">Chlo abb karte hai apna trip plan 😎✈️</p>
-
-      <form id="loginForm">
+    <h2>Login</h2>
+    <form>
+      <div class="input-group">
         <input type="email" placeholder="Email" required>
+      </div>
+      <div class="input-group">
         <input type="password" placeholder="Password" required>
-        <button type="submit">Login</button>
-      </form>
-
-      <p class="redirect-text">Don't have an account? <a href="signup.html">Sign Up</a></p>
-    </div>
+      </div>
+      <div class="options">
+        <label><input type="checkbox"> Remember me</label>
+        <a href="#">Forgot Password?</a>
+      </div>
+      <button type="submit">Login</button>
+      <p class="register">Don’t have an account? <a href="#">Register</a></p>
+    </form>
   </div>
-
-  <!-- Airplane Animation Icon -->
-  <div class="airplane">✈️</div>
-
-  <script src="login.js"></script>
 </body>
 </html>
