--- a/project.html
+++ b/project.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -150,9 +152,11 @@
       const days = Math.ceil(diffTime / (1000 * 60 * 60 * 24)) + 1; // include both start & end day
 
       // Redirect user to trip-schedule page with query params
-      window.location.href = trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)};
-    }
+      window.location.href = `trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)}`;
 
+    // ✅ Fetch location suggestions from OpenStreetMap Nominatim API
+    window.location.href = `trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)}`;
+    }
     // ✅ Fetch location suggestions from OpenStreetMap Nominatim API
     const destInput = document.getElementById("destination");
     const suggestionsBox = document.getElementById("suggestions");
@@ -164,8 +168,7 @@
         return;
       }
 
-      const url = https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5;
-
+      const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`;
       try {
         const response = await fetch(url, { headers: { "Accept-Language": "en" } });
         const results = await response.json();
