--- a/signup.html
+++ b/signup.html
@@ -1,35 +1,112 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up - Travel Planner</title>
-  <link rel="stylesheet" href="signup.css">
+  <title>Sign Up</title>
+  <link rel="stylesheet" href="style.css">
 </head>
+<style>
+  /* Background and box styling */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
+  background: url("https://images.pexels.com/photos/457882/pexels-photo-457882.jpeg") no-repeat center center/cover;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  background: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(15px);
+  padding: 40px;
+  border-radius: 15px;
+  text-align: center;
+  width: 350px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2);
+}
+
+h2 {
+  margin-bottom: 10px;
+  color: white;
+}
+
+p {
+  color: #f1f1f1;
+  margin-bottom: 20px;
+}
+
+input {
+  width: 100%;
+  padding: 12px;
+  margin: 10px 0;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  font-size: 14px;
+}
+
+button {
+  width: 100%;
+  padding: 12px;
+  margin-top: 15px;
+  background: #00bfff;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: 0.3s ease;
+}
+
+button:hover {
+  background: #0099cc;
+}
+
+a {
+  color: yellow;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+</style>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo"> Plan & Go ✈ </div>
-  </nav>
-
-  <!-- Signup Box -->
-  <div class="login-container">
-    <div class="login-box">
-      <h2>Create Account 🚀</h2>
-      <p class="welcome-text">Chlo ab start karte hain apna naya trip plan! ✨🌴</p>
-      
-      <form id="signupForm">
-        <input type="text" placeholder="Full Name" required>
-        <input type="email" placeholder="Email" required>
-        <input type="password" placeholder="Password" required>
-        <button type="submit">Sign Up</button>
-      </form>
-
-      <p class="redirect-text">Already have an account? <a href="login.html">Login</a></p>
-    </div>
+  <div class="container">
+    <h2>Create Account ✨</h2>
+    <p>Fill details to start your journey 🛫</p>
+    <form id="signupForm">
+      <input type="text" id="fullname" placeholder="Full Name" required>
+      <input type="email" id="email" placeholder="Email" required>
+      <input type="password" id="password" placeholder="Password" required>
+      <button type="submit">Sign Up</button>
+    </form>
+    <p>Already have an account? <a href="login.html">Login</a></p>
   </div>
 
-  <script src="signup.js"></script>
+  <script>
+    const signupForm = document.getElementById("signupForm");
+
+    signupForm.addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      const fullname = document.getElementById("fullname").value;
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      // Save user in localStorage
+      localStorage.setItem("userFullName", fullname);
+      localStorage.setItem("userEmail", email);
+      localStorage.setItem("userPassword", password);
+
+      alert("✅ Account Created Successfully! Now Login.");
+      window.location.href = "login.html";
+    });
+  </script>
 </body>
 </html>
