New changes in login and signup

--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@ h2 {
 }
 
 p {
-  color: #f1f1f1;
+  color: rgb(78, 70, 70);
   margin-bottom: 20px;
 }
 
@@ -66,7 +66,7 @@ button:hover {
 }
 
 a {
-  color: yellow;
+  color: grey;
   text-decoration: none;
   font-weight: bold;
 }
@@ -78,8 +78,7 @@ a:hover {
 </style>
 <body>
   <div class="container">
-    <h2>Welcome back! 👋</h2>
-    <p>Chlo abb karte hai apna trip plan 😍✈</p>
+    <h2>Welcome back!</h2>
     <form id="loginForm">
       <input type="email" id="email" placeholder="Email" required>
       <input type="password" id="password" placeholder="Password" required>
