--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} 
 
 .container {
   background: rgba(255, 255, 255, 0.2);
@@ -35,7 +35,7 @@ h2 {
 }
 
 p {
-  color: #f1f1f1;
+  color: rgb(78, 70, 70);
   margin-bottom: 20px;
 }
 
@@ -67,7 +67,7 @@ button:hover {
 }
 
 a {
-  color: yellow;
+  color: grey;
   text-decoration: none;
   font-weight: bold;
 }
@@ -78,8 +78,8 @@ a:hover {
 </style>
 <body>
   <div class="container">
-    <h2>Create Account ✨</h2>
-    <p>Fill details to start your journey 🛫</p>
+    <h2>Create Account</h2>
+    <p>Fill details to start your journey </p>
     <form id="signupForm">
       <input type="text" id="fullname" placeholder="Full Name" required>
       <input type="email" id="email" placeholder="Email" required>
