--- a/project.html
+++ b/project.html
@@ -92,11 +92,13 @@
   
     <div class="trips-container">
       <!-- Shimla -->
-      <div class="trip-card">
-        <img src="Shimla.png" alt="Shimla Family Trip">
-        <h3>Best Choices for Snowy Retreat</h3> 
-        <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
-      </div>
+       <a href="snowy.html">
+  <div class="trip-card">
+    <img src="Shimla.png" alt="Shimla Family Trip">
+    <h3>Best Choices for Snowy Retreat</h3>
+    <p>Perfect for families: Snowy mountains, toy train rides, and cozy stays in the hills of Himachal.</p>
+  </div>
+</a>
 
       <!-- Goa -->
       <div class="trip-card">
@@ -105,100 +107,34 @@
         <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
       </div>
 
-      <div class="trip-card">
-        <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
-        <h3>Best choices for Rain Retreat</h3>
-        <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
-      </div>
+      
+     <!-- Paris -->
+      <a href="rain.html">
+        <div class="trip-card">
+          <img src="https://images.unsplash.com/photo-1502602898657-3e91760cbb34?auto=format&fit=crop&w=800&q=80" alt="Paris Romance">
+          <h3>Best Choices for Rain Retreat</h3>
+          <p>Romantic Eiffel Tower views, candlelight dinners, and dreamy walks along the Seine.</p>
+        </div>
+      </a>
     </div>
   </section>
-
   <!-- Script -->
   <script>
-    // ✅ Disable past dates
-    window.onload = function () {
-      const today = new Date().toISOString().split("T")[0]; 
-      document.getElementById("startDate").setAttribute("min", today);
-      document.getElementById("endDate").setAttribute("min", today);
-
-      // ✅ Ensure End Date is not before Start Date
-      document.getElementById("startDate").addEventListener("change", function () {
-        const selectedStart = this.value;
-        document.getElementById("endDate").setAttribute("min", selectedStart);
-      });
-    };
-
-    function planTrip() {
-      const startDate = document.getElementById("startDate").value;
-      const endDate = document.getElementById("endDate").value;
-      const destination = document.getElementById("destination").value.trim();
-      const people = document.getElementById("people").value;
-
-      if (!startDate || !endDate || !destination || !people) {
-        alert("Please fill all fields before planning your trip!");
-        return;
-      }
-
-      // Calculate number of days
-      const start = new Date(startDate);
-      const end = new Date(endDate);
-      const diffTime = end - start;
-
-      if (diffTime < 0) {
-        alert("End date cannot be before start date!");
-        return;
-      }
-
-      const days = Math.ceil(diffTime / (1000 * 60 * 60 * 24)) + 1; // include both start & end day
-
-      // Redirect user to trip-schedule page with query params
-      window.location.href = `trip-schedule.html?start=${encodeURIComponent(startDate)}&end=${encodeURIComponent(endDate)}&days=${days}&destination=${encodeURIComponent(destination)}&people=${encodeURIComponent(people)}`;
-    }
-
-    // ✅ Fetch location suggestions from OpenStreetMap Nominatim API
-    // (removed stray closing brace here)
-    // ✅ Fetch location suggestions from OpenStreetMap Nominatim API
-    const destInput = document.getElementById("destination");
-    const suggestionsBox = document.getElementById("suggestions");
-
-    destInput.addEventListener("input", async function() {
-      const query = this.value.trim();
-      if (query.length < 2) {
-        suggestionsBox.innerHTML = "";
-        return;
-      }
-
-      const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`;
-      // const url = `https://nominatim.openstreetmap.org/search?format=json&q=${encodeURIComponent(query)}&addressdetails=1&limit=5`;
-      try {
-        const response = await fetch(url, { headers: { "Accept-Language": "en" } });
-        const results = await response.json();
-
-        suggestionsBox.innerHTML = "";
-
-        results.forEach(place => {
-          let displayName = place.display_name;
-
-          // Format: city, state, country
-          let city = place.address.city || place.address.town || place.address.village || "";
-          let state = place.address.state || "";
-          let country = place.address.country || "";
-          let formatted = [city, state, country].filter(Boolean).join(", ");
-
-          let div = document.createElement("div");
-          div.textContent = formatted || displayName;
-
-          div.onclick = function() {
-            destInput.value = formatted || displayName;
-            suggestionsBox.innerHTML = "";
-          };
-          suggestionsBox.appendChild(div);
+  // Snowy Retreat card click redirect
+  document.addEventListener("DOMContentLoaded", function() {
+    const tripCards = document.querySelectorAll('.trip-card');
+    tripCards.forEach(card => {
+      const title = card.querySelector('h3').innerText;
+      if(title.includes("Snowy Retreat")){
+        card.style.cursor = "pointer"; // cursor pointer
+        card.addEventListener('click', ()=>{
+          window.location.href = 'snowy-retreat.html';
         });
-      } catch (err) {
-        console.error("Error fetching locations:", err);
       }
     });
-  </script>
+  });
+</script>
+
 
   <footer>
     <p>Contact us: planandgo@gmail.com | +91 98765 43210</p>
