--- a/project.html
+++ b/project.html
@@ -101,11 +101,13 @@
 </a>
 
       <!-- Goa -->
-      <div class="trip-card">
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
-        <h3>Best choices for Sunnny Shores Retreat</h3>
-        <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
-      </div>
+       <a href="sunny.html">
+        <div class="trip-card">
+          <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?auto=format&fit=crop&w=800&q=80" alt="Goa Adventure">
+          <h3>Best Choices for Sunny Shores Retreat</h3>
+          <p>Beaches, nightlife, and water sports — the ultimate getaway with friends!</p>
+        </div>
+       </a>
 
       
      <!-- Paris -->
