--- a/snowy.html
+++ b/snowy.html
@@ -233,14 +233,39 @@
 
   <script>
   const places = [
-    {name:'Dalhousie', short:'Peaceful hill-station with colonial charm and pine forests.', more:'Dalhousie is a calm hill station in Himachal Pradesh known for its Victorian-style architecture, walking trails, and pleasant weather. Ideal for quiet nature walks, easy treks, and tea-time views.'},
-    {name:'Manali', short:'Gateway to high-altitude treks, rivers, and adventure sports.', more:'Manali offers breathtaking mountain vistas, access to Solang Valley for paragliding/zipline, and routes to Rohtang Pass. Great for couples, adventure lovers, and scenic drives.'},
-    {name:'Shimla', short:'Classic colonial hill capital with malls and pine-lined avenues.', more:'Shimla is the former summer capital with bustling Mall Road, the ridge, and easy day trips to nearby viewpoints. A wonderful mix of history, cafes, and hillwalks.'},
-    {name:'Mussoorie', short:'Known as the Queen of Hills — pleasant walks and viewpoints.', more:'Mussoorie (spelled Mussorie by some) gives gentle hikes, Camel\'s Back Road, Kempty Falls nearby, and panoramic views of the Doon Valley. Relaxed vibe and family-friendly.'},
-    {name:'Kashmir', short:'Riverside yoga, spiritual retreats and white-water rafting.', more:'Kashmir sits among beautiful valleys and rivers, offering serene landscapes, spiritual retreats, and adventure activities like white-water rafting and trekking. Perfect for a mix of wellness, spirituality, and thrill.'}
-  ];
+  {
+    name: 'Dalhousie',
+    short: 'Peaceful hill-station with colonial charm and pine forests.',
+    more: 'Dalhousie is a calm hill station in Himachal Pradesh known for its Victorian-style architecture, walking trails, and pleasant weather. Ideal for quiet nature walks, easy treks, and tea-time views.'
+  },
+  {
+    name: 'Manali',
+    short: 'Gateway to high-altitude treks, rivers, and adventure sports.',
+    more: 'Manali offers breathtaking mountain vistas, access to Solang Valley for paragliding/zipline, and routes to Rohtang Pass. Great for couples, adventure lovers, and scenic drives.'
+  },
+  {
+    name: 'Shimla',
+    short: 'Classic colonial hill capital with malls and pine-lined avenues.',
+    more: 'Shimla is the former summer capital with bustling Mall Road, the ridge, and easy day trips to nearby viewpoints. A wonderful mix of history, cafes, and hillwalks.'
+  },
+  {
+    name: 'Mussoorie',
+    short: 'Known as the Queen of Hills — pleasant walks and viewpoints.',
+    more: 'Mussoorie (spelled Mussorie by some) gives gentle hikes, Camel\'s Back Road, Kempty Falls nearby, and panoramic views of the Doon Valley. Relaxed vibe and family-friendly.'
+  },
+  {
+    name: 'Kashmir',
+    short: 'Riverside yoga, spiritual retreats and white-water rafting.',
+    more: 'Kashmir sits among beautiful valleys and rivers, offering serene landscapes, spiritual retreats, and adventure activities like white-water rafting and trekking. Perfect for a mix of wellness, spirituality, and thrill.'
+  },
+  {
+    name: 'Rishikesh',
+    short: 'Riverside yoga, spiritual retreats, and white-water rafting.',
+    more: 'Rishikesh sits along the sacred Ganga river, offering serene landscapes, yoga and meditation retreats, and thrilling adventure activities like white-water rafting and trekking. Perfect for a mix of wellness, spirituality, and adventure.'
+  }
+];
 
-  const pages = ['snowy-retreat.html', 'manali.html', 'shimla.html', 'mussoorie.html', 'kashmir.html'];
+  const pages = ['dalhousie.html', 'Manali.html', 'Shim.html', 'Mussoorie.html', 'kashmir.html' , 'Rishekesh.html'];
 
   const grid = document.getElementById('grid');
   
